初始化相关

--- a/example/index.html
+++ b/example/index.html
@@ -41,7 +41,7 @@
 
   <input type="text">
 
-  <script src="../dist/imager.js"></script>
+  <script src="../dist/clip.js"></script>
   <script src="./vconsole.js"></script>
   <script>
       var vConsole = new VConsole(); // 用于调试
